--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "copilot-vue-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
